--- a/.learn/resets/08-Split-Screen-in-three/index.html
+++ b/.learn/resets/08-Split-Screen-in-three/index.html
@@ -8,6 +8,10 @@
 	</head>
 
 	<body>
-		<h1>Hello World</h1>
+		<div class="wrapper">
+			<div class="boxA">A</div>
+			<div class="boxB">B</div>
+			<div class="boxC">C</div>
+		</div>
 	</body>
 </html>
